--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
-    <h2>Enter number:</h2>
+    <h1>Conversion from decimal to binary system</h1>
+    <h2>Enter number you want to convert:</h2>
     <input type="number" id="userInput" placeholder="Enter number here">
     <button onclick="getUserInput()">Submit</button>
 
