--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <h1>Conversion from decimal to binary system</h1>
     <h2>Enter number you want to convert:</h2>
     <input type="number" id="userInput" placeholder="Enter number here">
     <button onclick="getUserInput()">Submit</button>
 
+    <div id="resultBox"></div>
+    
     <script src="script.js"></script>
 
 </body>
